<resources>
    <string name="app_name">TalentSprint</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_exam">Next Exam</string>
    <string name="set_exam_strategy">Please set your exam details to\nget the exam strategy</string>
    <string name="your_alerts">YOUR ALERTS</string>
    <string name="lore_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ihas been the printing and typesettinand types Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ihas been the printing and typesettinand types </string>
    <string name="lore_ipsum_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ihas been the printing and typesettinand types</string>
    <string name="alerts_sample">IBPS syllabus 2017 has been updated</string>
    <string name="my_exams">MY EXAMS</string>
    <string name="add_exams_text">Currently, you do not have any exam set.\nPlease set your exam type and exam dates to\nplan
        better and get the right strategy.</string>
    <string name="add_now">ADD NOW</string>
    <string name="exam_name">Exam Name</string>
    <string name="bank_po">Bank PO</string>
    <string name="select_date">Select Date</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="daily_quiz">DAILY QUIZ</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="start_test">START TEST</string>
    <string name="subject">Subject</string>

    <string name="title_activity_splash">" "</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">HOME</string>
    <string name="exam_stratergy">EXAM STRATEGY</string>
    <string name="study_material">STUDY MATERIAL</string>
    <string name="current_affairs">CURRENT AFFAIRS</string>
    <string name="exam_alerts">EXAM ALERTS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="sample_dummy">Loreipsum is a sample for this dummy text of the beig type setting to be tested for this example content of the topic loreipsum test</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="terms_amp_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="question">Question</string>
    <string name="finish_test">FINISH TEST</string>
    <string name="submit">SUBMIT</string>
    <string name="test_result">TEST RESULT</string>
    <string name="total">Total</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>
    <string name="extra_taken">Extra Taken</string>
    <string name="done">DONE</string>
    <string name="review_answers">REVIEW ANSWERS</string>
    <string name="profile">PROFILE</string>
    <string name="settings">SETTINGS</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="notifications_small">Notifications</string>
    <string name="on">On</string>
    <string name="storage">Storage</string>
    <string name="internal">Internal</string>
    <string name="logout">LOGOUT</string>
    <string name="assess_text">Know your current status by taking an\nassessment.\nHelps you identify your strengths and\nweaknesses.</string>
    <string name="assess_yourself">ASSESS YOURSELF</string>
    <string name="generating_stratergy">Generating your personalized exam strategy.\nIt may take a few minutes, please
        wait</string>
    <string name="title_activity_date_dev">DateDevActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="filters">FILTERS</string>
    <string name="register_content">This content can be accessed FREE only by\nregistered users. Sign Up now for a new
        account\nor Login if already registered</string>
    <string name="login_with">Login with</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register_tc_pp">By registering a new account, you agree with our\nTerms and Conditions AND our Privacy policy</string>
    <string name="results">RESULTS</string>
    <string name="explanation">EXPLANATION</string>
    <string name="facebook_app_id">252580991902290</string>
    <string name="fb_login_protocol_scheme">fb252580991902290</string>
    <string name="check_mobi_api_key">A8575482-F5BC-4109-A6B6-AE6307D0D0C7</string>
    <string name="premium_resource_content">This content can be accessed only by Premium\nUsers. Please contact Talentsprint for
        premium\noffers to buy the full package</string>
</resources>
