<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.talentsprint.android.esa.fragments.QuestionItemFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/questionsCount"
            android:layout_alignTop="@+id/questionsCount"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/questionsCount"
            android:src="@drawable/side_tick"
            android:tint="@color/grayLight"/>

        <com.talentsprint.android.esa.views.OpenSansTextView
            android:id="@+id/questionsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:text="7/15"
            android:textColor="@color/gray_dark"
            android:textSize="14dp"/>

        <com.talentsprint.android.esa.views.OpenSansTextView
            android:id="@+id/questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="2"
            android:textColor="@color/gray_dark40Opc"
            android:textSize="22dp"/>

        <com.talentsprint.android.esa.views.OpenSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/questionNumber"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/questionNumber"
            android:text="@string/question"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/questionNumber"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray_dark"/>

        <WebView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/lore_ipsum_short"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/optionsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:layout_margin="20dp"
            android:paddingLeft="15dp"/>

        <com.talentsprint.android.esa.views.OpenSansStrongTextView
            android:id="@+id/correctAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optionsRecycler"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/centreDivider"
            android:gravity="center"
            android:text="Correct Answer :"
            android:textColor="@color/colorAccent"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/correctAnswer"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="#c7c6c6"/>

        <com.talentsprint.android.esa.views.OpenSansStrongTextView
            android:id="@+id/filtersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/explanation"
            android:textColor="@color/textTitleColor"
            android:textSize="15dp"/>

        <View
            android:layout_width="25dp"
            android:layout_height="5dp"
            android:layout_alignLeft="@+id/filtersText"
            android:layout_below="@+id/filtersText"
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimary"/>

        <WebView
            android:id="@+id/reasonWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filtersText"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/lore_ipsum_short"
            android:textColor="@color/gray_dark"
            android:textSize="16dp"/>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>

